@@ -1,3 +1,16 @@
+@article{noob,
+  author =	 {Triche, Timothy J and Weisenberger, Daniel J and Van Den Berg, David and Laird,
+                  Peter W and Siegmund, Kimberly D},
+  title =	 {{Low-level processing of Illumina Infinium DNA Methylation BeadArrays.}},
+  journal =	 {Nucleic Acids Research},
+  year =	 {2013},
+  volume =	 {41},
+  number =	 {7},
+  pages =	 {e90},
+  doi =		 {10.1093/nar/gkt090},
+  pmid =	 {23476028}
+}
+
 @article{minfi,
   author =	 {Aryee, Martin J and Jaffe, Andrew E and Corrada Bravo, Hector and Ladd-Acosta,
                   Christine and Feinberg, Andrew P and Hansen, Kasper D and Irizarry, Rafael A},
